fix "overflow-x:hidden"

--- a/stylesheets/layout/_footer.scss
+++ b/stylesheets/layout/_footer.scss
@@ -5,7 +5,7 @@
 footer {
     height: 186px;
     // need review, because of padding = not right width
-    width: 331px;
+    width: 100%;
     padding: 22px;
     background-color: #353535;
     color: white;
