--- a/stylesheets/layout/_header.scss
+++ b/stylesheets/layout/_header.scss
@@ -4,7 +4,7 @@
 
 header {
     height: 113px;
-    width: $maxwidth;
+    width: 100%;
     .frame {
         height: 63px;
         display: flex;
@@ -21,7 +21,7 @@ header {
 
     .location {
         background-color: $grey2;
-        width: $maxwidth;
+        width: 100%;
         height: 50px;
         @include center(17px);
         color: #353535;
