--- a/stylesheets/layout/_headline.scss
+++ b/stylesheets/layout/_headline.scss
@@ -3,7 +3,7 @@
 // -----------------------------------------------------------------------------
 
 .headline {
-    width: $maxwidth;
+    width: 100%;
     font-family: $body-font;
     display: flex;
     flex-direction: column;
