--- a/stylesheets/layout/_menu.scss
+++ b/stylesheets/layout/_menu.scss
@@ -1,5 +1,5 @@
 .menu {
-    width: $maxwidth;
+    width: 100%;
     font-family: $body-font;
     h1 {
         height: 31px;
