--- a/stylesheets/layout/_offers.scss
+++ b/stylesheets/layout/_offers.scss
@@ -1,6 +1,6 @@
 .offers {
     font-family: $body-font;
-    width: $maxwidth;
+    width: 100%;
     padding-bottom: 66px;
     background-color: #F6F6F6;
     padding-top: 54px;
