--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -58,7 +58,7 @@ table {
  */
 header {
   height: 113px;
-  width: 375px;
+  width: 100%;
 }
 header .frame {
   height: 63px;
@@ -74,7 +74,7 @@ header .frame__logo {
 }
 header .location {
   background-color: #EAEAEA;
-  width: 375px;
+  width: 100%;
   height: 50px;
   display: flex;
   justify-content: center;
@@ -95,7 +95,7 @@ header .location__form input {
 
 footer {
   height: 186px;
-  width: 331px;
+  width: 100%;
   padding: 22px;
   background-color: #353535;
   color: white;
@@ -118,7 +118,7 @@ footer ul .fa-solid {
 }
 
 .headline {
-  width: 375px;
+  width: 100%;
   font-family: roboto;
   display: flex;
   flex-direction: column;
@@ -143,7 +143,7 @@ footer ul .fa-solid {
 }
 
 .menu {
-  width: 375px;
+  width: 100%;
   font-family: roboto;
 }
 .menu h1 {
@@ -163,7 +163,7 @@ footer ul .fa-solid {
 
 .offers {
   font-family: roboto;
-  width: 375px;
+  width: 100%;
   padding-bottom: 66px;
   background-color: #F6F6F6;
   padding-top: 54px;
@@ -447,4 +447,9 @@ input[type=checkbox]:not(checked) + label .fa-regular {
 
 .lettre:nth-child(8) {
   animation-delay: 0.8s;
+}
+
+html, body {
+  width: 100%;
+  overflow-x: hidden;
 }/*# sourceMappingURL=main.css.map */
