--- a/stylesheets/pages/_home.scss
+++ b/stylesheets/pages/_home.scss
@@ -2,3 +2,7 @@
 // This file contains styles that are specific to the home page.
 // -----------------------------------------------------------------------------
 
+html,body{
+    width:100%;
+    overflow-x:hidden;
+    }
